# microgradplus

./: .gitignore  CMakeLists.txt
examples/: test.cpp
micrograd/: CMakeLists.txt  defs.hpp  engine.cpp  engine.hpp
